--- a/frontend/src/app/video-chat/video-chat.component.html
+++ b/frontend/src/app/video-chat/video-chat.component.html
@@ -13,4 +13,4 @@
     <video #remote_video [autoplay]="true" class="w-96 h-64 shadow-md rounded-md"></video>
 </div>
 
-<button class="my-2 bg-red-300 px-2 py-1 rounded-lg font-semibold shadow-md hover:scale-105 duration-200" (click)="print()"> Print</button>
+<button class="my-2 bg-red-300 px-2 py-1 rounded-lg font-semibold shadow-md hover:scale-105 duration-200" (click)="mute()"> Mute</button>
